--- a/form.html
+++ b/form.html
@@ -82,7 +82,7 @@
             <button
               id="btnEnviar"
               type="submit"
-              class="group inline-flex w-full items-center justify-center gap-2 rounded-2xl bg-gradient-to-r from-sky-200 via-rose-200 to-emerald-200 px-4 py-3
+              class="group inline-flex w-full items-center justify-center gap-2 rounded-2xl bg-gradient-to-r from-sky-200 to-emerald-200 px-4 py-3
                      font-semibold text-slate-800 shadow-md shadow-slate-200/60 ring-1 ring-black/5 transition
                      hover:brightness-[0.98] active:scale-[0.99] disabled:cursor-not-allowed disabled:opacity-60"
             >
