--- a/form.html
+++ b/form.html
@@ -3,96 +3,106 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Formulario</title>
+  <title>Gastos Alemania</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="min-h-screen bg-gradient-to-br from-rose-50 via-sky-50 to-emerald-50">
   <main class="mx-auto flex min-h-screen max-w-5xl items-center justify-center p-6">
-    <section class="w-full max-w-lg">
-      <!-- Card -->
+    <section class="w-full max-w-xl">
       <div class="rounded-3xl bg-white/80 p-8 shadow-xl ring-1 ring-black/5 backdrop-blur">
-        <div class="mb-6">
+        <header class="mb-6">
           <h1 class="text-2xl font-semibold tracking-tight text-slate-800">
-            Envíanos tus datos
+            Registro de Gastos
           </h1>
           <p class="mt-1 text-sm text-slate-600">
-            Completa el formulario y lo guardaremos en Google Sheets.
+            Se guarda en Google Sheets (hoja: <b>Gastos Alemania</b>).
           </p>
-        </div>
+        </header>
 
-        <form id="miForm" class="space-y-4">
-          <!-- Campo 1 -->
+        <form id="gastoForm" class="space-y-4">
+          <!-- Fecha -->
           <div>
-            <label for="campo1" class="mb-1 block text-sm font-medium text-slate-700">
-              Campo 1
+            <label for="fechaCompra" class="mb-1 block text-sm font-medium text-slate-700">
+              Fecha de Compra
             </label>
             <input
-              id="campo1"
-              required
-              placeholder="Ej: Nombre"
+              id="fechaCompra"
+              placeholder="20/01/2026"
               class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
                      focus:border-sky-300 focus:ring-4 focus:ring-sky-100"
             />
           </div>
 
-          <!-- Campo 2 -->
+          <!-- Categoría -->
           <div>
-            <label for="campo2" class="mb-1 block text-sm font-medium text-slate-700">
-              Campo 2
+            <label for="categoria" class="mb-1 block text-sm font-medium text-slate-700">
+              Categoría
             </label>
-            <input
-              id="campo2"
-              required
-              placeholder="Ej: Email"
-              class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
+            <select
+              id="categoria"
+              class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 shadow-sm outline-none transition
                      focus:border-emerald-300 focus:ring-4 focus:ring-emerald-100"
-            />
+            >
+              <option value="" selected disabled>Selecciona una categoría</option>
+              <option>Arriendo</option>
+              <option>Caracas</option>
+              <option>Gastos Mariana</option>
+              <option>Gasolina</option>
+              <option>Mercado</option>
+              <option>Otros Gastos</option>
+              <option>Servicios</option>
+              <option>Tarjeta de Crédito</option>
+            </select>
           </div>
 
-          <!-- Campo 3 -->
+          <!-- Descripción -->
           <div>
-            <label for="campo3" class="mb-1 block text-sm font-medium text-slate-700">
-              Campo 3
+            <label for="descripcion" class="mb-1 block text-sm font-medium text-slate-700">
+              Descripción
             </label>
             <input
-              id="campo3"
-              placeholder="Ej: Teléfono"
+              id="descripcion"
+              placeholder="Ej: Compra supermercado"
               class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
                      focus:border-rose-300 focus:ring-4 focus:ring-rose-100"
             />
           </div>
 
-          <!-- Campo 4 -->
+          <!-- Valor -->
           <div>
-            <label for="campo4" class="mb-1 block text-sm font-medium text-slate-700">
-              Campo 4
+            <label for="valor" class="mb-1 block text-sm font-medium text-slate-700">
+              Valor (COP)
             </label>
-            <textarea
-              id="campo4"
-              rows="4"
-              placeholder="Ej: Mensaje"
-              class="w-full resize-none rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
-                     focus:border-violet-300 focus:ring-4 focus:ring-violet-100"
-            ></textarea>
+            <div class="relative">
+              <span class="pointer-events-none absolute left-4 top-1/2 -translate-y-1/2 text-slate-500">$</span>
+              <input
+                id="valor"
+                inputmode="numeric"
+                placeholder="25000"
+                class="w-full rounded-2xl border border-slate-200 bg-white/70 pl-8 pr-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
+                       focus:border-violet-300 focus:ring-4 focus:ring-violet-100"
+              />
+            </div>
+            <p class="mt-1 text-xs text-slate-500">Puedes escribir 25.000 o 25000.</p>
           </div>
 
-          <!-- Button + Status -->
           <div class="pt-2">
             <button
-              id="btnEnviar"
+              id="btnGuardar"
               type="submit"
-              class="group inline-flex w-full items-center justify-center gap-2 rounded-2xl bg-gradient-to-r from-sky-200 to-emerald-200 px-4 py-3
+              class="group inline-flex w-full items-center justify-center gap-2 rounded-2xl
+                     bg-gradient-to-r from-sky-200 via-rose-200 to-emerald-200 px-4 py-3
                      font-semibold text-slate-800 shadow-md shadow-slate-200/60 ring-1 ring-black/5 transition
                      hover:brightness-[0.98] active:scale-[0.99] disabled:cursor-not-allowed disabled:opacity-60"
             >
-              <span>Enviar</span>
+              <span>Guardar gasto</span>
               <span class="inline-block transition group-hover:translate-x-0.5">→</span>
             </button>
 
             <p id="estado"
                class="mt-3 rounded-2xl bg-slate-50 px-4 py-3 text-sm text-slate-700 ring-1 ring-slate-100">
-              Listo para enviar.
+              Listo para guardar.
             </p>
           </div>
         </form>
@@ -104,35 +114,25 @@
     const WEB_APP_URL = "PEGA_AQUI_TU_URL_DEL_WEB_APP";
     const TOKEN = "CAMBIA_ESTE_TOKEN_LARGO_Y_SEGURO";
 
-    const form = document.getElementById("miForm");
+    const form = document.getElementById("gastoForm");
     const estado = document.getElementById("estado");
-    const btnEnviar = document.getElementById("btnEnviar");
+    const btn = document.getElementById("btnGuardar");
 
-    const setStatus = (msg, type = "info") => {
-      // type: info | ok | error
-      const base = "mt-3 rounded-2xl px-4 py-3 text-sm ring-1 transition";
-      const styles = {
-        info:  base + " bg-slate-50 text-slate-700 ring-slate-100",
-        ok:    base + " bg-emerald-50 text-emerald-800 ring-emerald-100",
-        error: base + " bg-rose-50 text-rose-800 ring-rose-100",
-      };
-      estado.className = styles[type] || styles.info;
-      estado.textContent = msg;
-    };
+    const onlyDigits = (s) => (s || "").toString().replace(/[^\d]/g, "");
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
       const payload = {
         token: TOKEN,
-        campo1: document.getElementById("campo1").value,
-        campo2: document.getElementById("campo2").value,
-        campo3: document.getElementById("campo3").value,
-        campo4: document.getElementById("campo4").value,
+        fechaCompra: document.getElementById("fechaCompra").value,
+        categoria: document.getElementById("categoria").value,
+        descripcion: document.getElementById("descripcion").value,
+        valor: Number(onlyDigits(document.getElementById("valor").value) || 0),
       };
 
-      btnEnviar.disabled = true;
-      setStatus("Enviando...", "info");
+      btn.disabled = true;
+      estado.textContent = "Guardando...";
 
       try {
         const res = await fetch(WEB_APP_URL, {
@@ -144,15 +144,15 @@
         const data = await res.json();
 
         if (data.ok) {
-          setStatus("✅ Enviado correctamente", "ok");
+          estado.textContent = "✅ Guardado en Google Sheets.";
           form.reset();
         } else {
-          setStatus("❌ Error: " + (data.error || "desconocido"), "error");
+          estado.textContent = "❌ Error: " + (data.error || "desconocido");
         }
       } catch (err) {
-        setStatus("❌ Error de red: " + err, "error");
+        estado.textContent = "❌ Error de red: " + err;
       } finally {
-        btnEnviar.disabled = false;
+        btn.disabled = false;
       }
     });
   </script>
