Update WEB_APP_URL to new script URL

--- a/form.html
+++ b/form.html
@@ -111,7 +111,7 @@
   </main>
 
   <script>
-    const WEB_APP_URL = "PEGA_AQUI_TU_URL_DEL_WEB_APP";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzidaLrt2pCoCFizQfGz0mRAM8vep8YjDZbXx9alGy4GtKMuV_cjXpoMjd9XUTKJnWp/exec";
     const TOKEN = "CAMBIA_ESTE_TOKEN_LARGO_Y_SEGURO";
 
     const form = document.getElementById("gastoForm");
