--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gastos Alemania</title>
+  <title>Gastos Aleman</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
