--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gastos Aleman</title>
+  <title>Gastos Alemania</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -111,7 +111,7 @@
   </main>
 
   <script>
-    const WEB_APP_URL = "PEGA_AQUI_TU_URL_DEL_WEB_APP";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzidaLrt2pCoCFizQfGz0mRAM8vep8YjDZbXx9alGy4GtKMuV_cjXpoMjd9XUTKJnWp/exec";
     const TOKEN = "CAMBIA_ESTE_TOKEN_LARGO_Y_SEGURO";
 
     const form = document.getElementById("gastoForm");
