--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gastos Alemanias</title>
+  <title>Gastos Alemania</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -115,18 +115,23 @@
   const TOKEN = "CAMBIA_ESTE_TOKEN_LARGO_Y_SEGURO";
 
   // callback global para JSONP
-  window.onGsResponse = function (data) {
-    const estado = document.getElementById("estado");
-    const btn = document.getElementById("btnGuardar");
-    btn.disabled = false;
+  const REDIRECT_TO = "/cash/";
 
-    if (data && data.ok) {
-      estado.textContent = "✅ Guardado en Google Sheets.";
-      document.getElementById("gastoForm").reset();
-    } else {
-      estado.textContent = "❌ Error: " + (data?.error || "desconocido");
-    }
-  };
+window.onGsResponse = function (data) {
+  const estado = document.getElementById("estado");
+  const btn = document.getElementById("btnGuardar");
+  btn.disabled = false;
+
+  if (data && data.ok) {
+    estado.textContent = "✅ Guardado. Redirigiendo...";
+    setTimeout(() => {
+      window.location.href = REDIRECT_TO;
+    }, 400);
+  } else {
+    estado.textContent = "❌ Error: " + (data?.error || "desconocido");
+  }
+};
+
 
   function sendJsonp(params) {
     return new Promise((resolve) => {
