--- a/form.html
+++ b/form.html
@@ -28,6 +28,7 @@
             </label>
             <input
               id="fechaCompra"
+              autocomplete="off"
               placeholder="20/01/2026"
               class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
                      focus:border-sky-300 focus:ring-4 focus:ring-sky-100"
@@ -63,6 +64,7 @@
             </label>
             <input
               id="descripcion"
+              autocomplete="off"
               placeholder="Ej: Compra supermercado"
               class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
                      focus:border-rose-300 focus:ring-4 focus:ring-rose-100"
@@ -124,9 +126,7 @@ window.onGsResponse = function (data) {
 
   if (data && data.ok) {
     estado.textContent = "✅ Guardado. Redirigiendo...";
-    setTimeout(() => {
-      window.location.href = REDIRECT_TO;
-    }, 400);
+    window.location.href = REDIRECT_TO;
   } else {
     estado.textContent = "❌ Error: " + (data?.error || "desconocido");
   }
