--- a/form.html
+++ b/form.html
@@ -1,167 +1,143 @@
 <!doctype html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gastos Alemania</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gastos Alemania</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="min-h-screen bg-gradient-to-br from-rose-50 via-sky-50 to-emerald-50">
-  <main class="mx-auto flex min-h-screen max-w-5xl items-center justify-center p-6">
-    <section class="w-full max-w-xl">
-      <div class="rounded-3xl bg-white/80 p-8 shadow-xl ring-1 ring-black/5 backdrop-blur">
-        <header class="mb-6">
-          <h1 class="text-2xl font-semibold tracking-tight text-slate-800">
-            Registro de Gastos
-          </h1>
-          <p class="mt-1 text-sm text-slate-600">
-            Se guarda en Google Sheets (hoja: <b>Gastos Alemania</b>).
-          </p>
-        </header>
+    <main class="mx-auto flex min-h-screen max-w-5xl items-center justify-center p-6">
+        <section class="w-full max-w-xl">
+            <div class="rounded-3xl bg-white/80 p-8 shadow-xl ring-1 ring-black/5 backdrop-blur">
+                <header class="mb-6">
+                    <h1 class="text-2xl font-semibold tracking-tight text-slate-800">
+                        Registro de Gastos
+                    </h1>
+                </header>
 
-        <form id="gastoForm" class="space-y-4" autocomplete="off">
-  <!-- Fecha -->
-  <div>
-    <label for="fechaCompra" class="mb-1 block text-sm font-medium text-slate-700">
-      Fecha de Compra
-    </label>
-    <input
-      id="fechaCompra"
-      autocomplete="off"
-      placeholder="20/01/2026"
-      class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
-             focus:border-sky-300 focus:ring-4 focus:ring-sky-100"
-    />
-  </div>
+                <form id="gastoForm" class="space-y-4" autocomplete="off">
+                    <!-- Fecha -->
+                    <div>
+                        <label for="fechaCompra" class="mb-1 block text-sm font-medium text-slate-700">
+                            Fecha de Compra
+                        </label>
+                        <input type="date" id="fechaCompra" autocomplete="off" value="<?php echo date('Y-m-d'); ?>" class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
+             focus:border-sky-300 focus:ring-4 focus:ring-sky-100" />
+                    </div>
 
-  <!-- Categoría -->
-  <div>
-    <label for="categoria" class="mb-1 block text-sm font-medium text-slate-700">
-      Categoría
-    </label>
-    <select
-      id="categoria"
-      autocomplete="off"
-      class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 shadow-sm outline-none transition
-             focus:border-emerald-300 focus:ring-4 focus:ring-emerald-100"
-    >
-      <option value="" selected disabled>Selecciona una categoría</option>
-      <option>Arriendo</option>
-      <option>Caracas</option>
-      <option>Gastos Mariana</option>
-      <option>Gasolina</option>
-      <option>Mercado</option>
-      <option>Otros Gastos</option>
-      <option>Servicios</option>
-      <option>Tarjeta de Crédito</option>
-    </select>
-  </div>
+                    <!-- Categoría -->
+                    <div>
+                        <label for="categoria" class="mb-1 block text-sm font-medium text-slate-700">
+                            Categoría
+                        </label>
+                        <select id="categoria" autocomplete="off" class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 shadow-sm outline-none transition
+             focus:border-emerald-300 focus:ring-4 focus:ring-emerald-100">
+                            <option value="" selected disabled>Selecciona una categoría</option>
+                            <option>Arriendo</option>
+                            <option>Caracas</option>
+                            <option>Gastos Mariana</option>
+                            <option>Gasolina</option>
+                            <option>Mercado</option>
+                            <option>Otros Gastos</option>
+                            <option>Servicios</option>
+                            <option>Tarjeta de Crédito</option>
+                        </select>
+                    </div>
 
-  <!-- Descripción -->
-  <div>
-    <label for="descripcion" class="mb-1 block text-sm font-medium text-slate-700">
-      Descripción
-    </label>
-    <input
-      id="descripcion"
-      autocomplete="off"
-      placeholder="Ej: Compra supermercado"
-      class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
-             focus:border-rose-300 focus:ring-4 focus:ring-rose-100"
-    />
-  </div>
+                    <!-- Descripción -->
+                    <div>
+                        <label for="descripcion" class="mb-1 block text-sm font-medium text-slate-700">
+                            Descripción
+                        </label>
+                        <input id="descripcion" autocomplete="off" placeholder="Ej: Compra supermercado" class="w-full rounded-2xl border border-slate-200 bg-white/70 px-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
+             focus:border-rose-300 focus:ring-4 focus:ring-rose-100" />
+                    </div>
 
-  <!-- Valor -->
-  <div>
-    <label for="valor" class="mb-1 block text-sm font-medium text-slate-700">
-      Valor (COP)
-    </label>
-    <div class="relative">
-      <span class="pointer-events-none absolute left-4 top-1/2 -translate-y-1/2 text-slate-500">$</span>
-      <input
-        id="valor"
-        autocomplete="off"
-        inputmode="numeric"
-        placeholder="25000"
-        class="w-full rounded-2xl border border-slate-200 bg-white/70 pl-8 pr-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
-               focus:border-violet-300 focus:ring-4 focus:ring-violet-100"
-      />
-    </div>
-  </div>
+                    <!-- Valor -->
+                    <div>
+                        <label for="valor" class="mb-1 block text-sm font-medium text-slate-700">
+                            Valor (COP)
+                        </label>
+                        <div class="relative">
+                            <span
+                                class="pointer-events-none absolute left-4 top-1/2 -translate-y-1/2 text-slate-500">$</span>
+                            <input id="valor" autocomplete="off" inputmode="numeric" placeholder="25000" class="w-full rounded-2xl border border-slate-200 bg-white/70 pl-8 pr-4 py-3 text-slate-800 placeholder:text-slate-400 shadow-sm outline-none transition
+               focus:border-violet-300 focus:ring-4 focus:ring-violet-100" />
+                        </div>
+                    </div>
 
-  <div class="pt-2">
-    <button
-      id="btnGuardar"
-      type="submit"
-      class="group inline-flex w-full items-center justify-center gap-2 rounded-2xl
+                    <div class="pt-2">
+                        <button id="btnGuardar" type="submit" class="group inline-flex w-full items-center justify-center gap-2 rounded-2xl
              bg-gradient-to-r from-sky-200 via-rose-200 to-emerald-200 px-4 py-3
              font-semibold text-slate-800 shadow-md shadow-slate-200/60 ring-1 ring-black/5 transition
-             hover:brightness-[0.98] active:scale-[0.99] disabled:cursor-not-allowed disabled:opacity-60"
-    >
-      <span>Guardar gasto</span>
-      <span class="inline-block transition group-hover:translate-x-0.5">→</span>
-    </button>
-  </div>
-</form>
-        
-      </div>
-    </section>
-  </main>
+             hover:brightness-[0.98] active:scale-[0.99] disabled:cursor-not-allowed disabled:opacity-60">
+                            <span>Guardar gasto</span>
+                            <span class="inline-block transition group-hover:translate-x-0.5">→</span>
+                        </button>
+                    </div>
+                </form>
 
-<script>
-  const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzidaLrt2pCoCFizQfGz0mRAM8vep8YjDZbXx9alGy4GtKMuV_cjXpoMjd9XUTKJnWp/exec";
-  const TOKEN = "CAMBIA_ESTE_TOKEN_LARGO_Y_SEGURO";
-  const REDIRECT_TO = "/cash/";
+            </div>
+        </section>
+    </main>
 
-  // JSONP callback (sin mostrar estado)
-  window.onGsResponse = function (data) {
-    const btn = document.getElementById("btnGuardar");
-    btn.disabled = false;
+    <script>
+        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzidaLrt2pCoCFizQfGz0mRAM8vep8YjDZbXx9alGy4GtKMuV_cjXpoMjd9XUTKJnWp/exec";
+        const TOKEN = "CAMBIA_ESTE_TOKEN_LARGO_Y_SEGURO";
+        const REDIRECT_TO = "/cash/";
 
-    if (data && data.ok) {
-      window.location.href = REDIRECT_TO; // ✅ redirección inmediata
-    } else {
-      // Si quieres, puedes hacer un alert mínimo (opcional):
-      alert("Error: " + (data?.error || "desconocido"));
-    }
-  };
+        // JSONP callback (sin mostrar estado)
+        window.onGsResponse = function (data) {
+            const btn = document.getElementById("btnGuardar");
+            btn.disabled = false;
 
-  function sendJsonp(params) {
-    const qs = new URLSearchParams(params).toString();
-    const s = document.createElement("script");
-    s.src = `${WEB_APP_URL}?${qs}`;
-    s.async = true;
+            if (data && data.ok) {
+                window.location.href = REDIRECT_TO; // ✅ redirección inmediata
+            } else {
+                // Si quieres, puedes hacer un alert mínimo (opcional):
+                alert("Error: " + (data?.error || "desconocido"));
+            }
+        };
 
-    s.onerror = () => {
-      s.remove();
-      window.onGsResponse({ ok: false, error: "Failed to load script" });
-    };
+        function sendJsonp(params) {
+            const qs = new URLSearchParams(params).toString();
+            const s = document.createElement("script");
+            s.src = `${WEB_APP_URL}?${qs}`;
+            s.async = true;
 
-    s.onload = () => {
-      // el callback se ejecuta al cargar
-      s.remove();
-    };
+            s.onerror = () => {
+                s.remove();
+                window.onGsResponse({ ok: false, error: "Failed to load script" });
+            };
 
-    document.body.appendChild(s);
-  }
+            s.onload = () => {
+                // el callback se ejecuta al cargar
+                s.remove();
+            };
 
-  document.getElementById("gastoForm").addEventListener("submit", (e) => {
-    e.preventDefault();
+            document.body.appendChild(s);
+        }
 
-    const btn = document.getElementById("btnGuardar");
-    btn.disabled = true;
+        document.getElementById("gastoForm").addEventListener("submit", (e) => {
+            e.preventDefault();
 
-    sendJsonp({
-      callback: "onGsResponse",
-      token: TOKEN,
-      fechaCompra: document.getElementById("fechaCompra").value,
-      categoria: document.getElementById("categoria").value,
-      descripcion: document.getElementById("descripcion").value,
-      valor: document.getElementById("valor").value
-    });
-  });
-</script>
+            const btn = document.getElementById("btnGuardar");
+            btn.disabled = true;
+
+            sendJsonp({
+                callback: "onGsResponse",
+                token: TOKEN,
+                fechaCompra: document.getElementById("fechaCompra").value,
+                categoria: document.getElementById("categoria").value,
+                descripcion: document.getElementById("descripcion").value,
+                valor: document.getElementById("valor").value
+            });
+        });
+    </script>
 
 </body>
+
 </html>
